[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "millionscan"
version = "0.1.0"
description = "Official Python SDK for MillionScan — scored on-chain perpetual futures trader data over REST."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "MillionScan", email = "contact@millionscan.com" }]
keywords = [
    "millionscan",
    "perpetual-futures",
    "on-chain",
    "trader-analytics",
    "trader-api",
    "crypto-research",
    "ai-agent",
    "claude-code",
    "cursor",
    "vibe-coding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25,<0.29",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://millionscan.com"
Documentation = "https://millionscan.com/developers/docs"
Cookbook = "https://millionscan.com/cookbook"
Repository = "https://github.com/millionscan/millionscan-python"
Issues = "https://github.com/millionscan/millionscan-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["millionscan"]

[tool.hatch.build.targets.sdist]
include = [
    "/millionscan",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
